target/generated-sources/antlr4/com/daviondk/translator/ImperativeLanguageParser.java
// Generated from com/daviondk/translator/ImperativeLanguageParser.g4 by ANTLR 4.9
package com.daviondk.translator;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ImperativeLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHILE=1, FOR=2, IN=3, READINT=4, READDOUBLE=5, READ=6, PRINT=7, PRINTINT=8, 
		PRINTDOUBLE=9, PRINTLN=10, IF=11, ELSE=12, ADD=13, SUB=14, MUL=15, DIV=16, 
		MOD=17, EQ=18, NE=19, LT=20, GT=21, GE=22, LE=23, AND=24, OR=25, XOR=26, 
		NOT=27, LPAREN=28, RPAREN=29, LBRACE=30, RBRACE=31, RANGE=32, SEMICOLON=33, 
		COLON=34, COMMA=35, NEWLINE=36, WS=37, VAR=38, VAL=39, ASSIGN=40, DEF=41, 
		RETURN=42, MAIN=43, BOOLEAN=44, TYPENAME=45, INT=46, STRING=47, DOUBLE=48, 
		NAME=49;
	public static final int
		RULE_program = 0, RULE_statements = 1, RULE_function = 2, RULE_args = 3, 
		RULE_type = 4, RULE_functionBody = 5, RULE_statement = 6, RULE_callUser = 7, 
		RULE_callArgs = 8, RULE_assignment = 9, RULE_value = 10, RULE_callRead = 11, 
		RULE_callReadInt = 12, RULE_callReadDouble = 13, RULE_callReadString = 14, 
		RULE_callPrint = 15, RULE_expr = 16, RULE_maxExpr = 17, RULE_unary = 18, 
		RULE_recExpr = 19, RULE_logical = 20, RULE_conditionStatement = 21, RULE_condition = 22, 
		RULE_cycleStatement = 23, RULE_whileStatement = 24, RULE_forStatement = 25, 
		RULE_defVariable = 26, RULE_returnStatement = 27, RULE_mainStatement = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statements", "function", "args", "type", "functionBody", 
			"statement", "callUser", "callArgs", "assignment", "value", "callRead", 
			"callReadInt", "callReadDouble", "callReadString", "callPrint", "expr", 
			"maxExpr", "unary", "recExpr", "logical", "conditionStatement", "condition", 
			"cycleStatement", "whileStatement", "forStatement", "defVariable", "returnStatement", 
			"mainStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'while'", "'for'", "'in'", "'readInt'", "'readDouble'", "'read'", 
			"'print'", "'printInt'", "'printDouble'", "'println'", "'if'", "'else'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'>='", 
			"'<='", "'and'", "'or'", "'xor'", "'not'", "'('", "')'", "'{'", "'}'", 
			"'..'", "';'", "':'", "','", null, null, "'var'", "'val'", "'='", null, 
			"'return'", "'main'", null, null, null, "'\".*\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHILE", "FOR", "IN", "READINT", "READDOUBLE", "READ", "PRINT", 
			"PRINTINT", "PRINTDOUBLE", "PRINTLN", "IF", "ELSE", "ADD", "SUB", "MUL", 
			"DIV", "MOD", "EQ", "NE", "LT", "GT", "GE", "LE", "AND", "OR", "XOR", 
			"NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "RANGE", "SEMICOLON", 
			"COLON", "COMMA", "NEWLINE", "WS", "VAR", "VAL", "ASSIGN", "DEF", "RETURN", 
			"MAIN", "BOOLEAN", "TYPENAME", "INT", "STRING", "DOUBLE", "NAME"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ImperativeLanguageParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ImperativeLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ImperativeLanguageParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			statements();
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<DefVariableContext> defVariable() {
			return getRuleContexts(DefVariableContext.class);
		}
		public DefVariableContext defVariable(int i) {
			return getRuleContext(DefVariableContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public MainStatementContext mainStatement() {
			return getRuleContext(MainStatementContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(63);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case TYPENAME:
						{
						setState(61);
						defVariable();
						}
						break;
					case DEF:
						{
						setState(62);
						function();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(68);
				mainStatement();
				}
				break;
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEF || _la==TYPENAME) {
				{
				setState(73);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TYPENAME:
					{
					setState(71);
					defVariable();
					}
					break;
				case DEF:
					{
					setState(72);
					function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ImperativeLanguageParser.DEF, 0); }
		public TerminalNode NAME() { return getToken(ImperativeLanguageParser.NAME, 0); }
		public TerminalNode LPAREN() { return getToken(ImperativeLanguageParser.LPAREN, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ImperativeLanguageParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(ImperativeLanguageParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(DEF);
			setState(79);
			match(NAME);
			setState(80);
			match(LPAREN);
			setState(81);
			args();
			setState(82);
			match(RPAREN);
			setState(83);
			match(COLON);
			setState(84);
			type();
			setState(85);
			functionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(ImperativeLanguageParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(ImperativeLanguageParser.NAME, i);
		}
		public List<TerminalNode> COLON() { return getTokens(ImperativeLanguageParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ImperativeLanguageParser.COLON, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ImperativeLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ImperativeLanguageParser.COMMA, i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(87);
				match(NAME);
				setState(88);
				match(COLON);
				setState(89);
				type();
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(90);
					match(COMMA);
					setState(91);
					match(NAME);
					setState(92);
					match(COLON);
					setState(93);
					type();
					}
					}
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode TYPENAME() { return getToken(ImperativeLanguageParser.TYPENAME, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(TYPENAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(ImperativeLanguageParser.LBRACE, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(ImperativeLanguageParser.RBRACE, 0); }
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitFunctionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitFunctionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(LBRACE);
			setState(104);
			statement();
			setState(105);
			returnStatement();
			setState(106);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<CallUserContext> callUser() {
			return getRuleContexts(CallUserContext.class);
		}
		public CallUserContext callUser(int i) {
			return getRuleContext(CallUserContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ImperativeLanguageParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ImperativeLanguageParser.SEMICOLON, i);
		}
		public List<DefVariableContext> defVariable() {
			return getRuleContexts(DefVariableContext.class);
		}
		public DefVariableContext defVariable(int i) {
			return getRuleContext(DefVariableContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<CallPrintContext> callPrint() {
			return getRuleContexts(CallPrintContext.class);
		}
		public CallPrintContext callPrint(int i) {
			return getRuleContext(CallPrintContext.class,i);
		}
		public List<ConditionStatementContext> conditionStatement() {
			return getRuleContexts(ConditionStatementContext.class);
		}
		public ConditionStatementContext conditionStatement(int i) {
			return getRuleContext(ConditionStatementContext.class,i);
		}
		public List<CycleStatementContext> cycleStatement() {
			return getRuleContexts(CycleStatementContext.class);
		}
		public CycleStatementContext cycleStatement(int i) {
			return getRuleContext(CycleStatementContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << PRINTINT) | (1L << PRINTDOUBLE) | (1L << PRINTLN) | (1L << IF) | (1L << NOT) | (1L << LPAREN) | (1L << BOOLEAN) | (1L << TYPENAME) | (1L << INT) | (1L << STRING) | (1L << DOUBLE) | (1L << NAME))) != 0)) {
				{
				setState(121);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(108);
					callUser();
					setState(109);
					match(SEMICOLON);
					}
					break;
				case 2:
					{
					setState(111);
					defVariable();
					}
					break;
				case 3:
					{
					setState(112);
					assignment();
					}
					break;
				case 4:
					{
					setState(113);
					callPrint();
					setState(114);
					match(SEMICOLON);
					}
					break;
				case 5:
					{
					setState(116);
					conditionStatement();
					}
					break;
				case 6:
					{
					setState(117);
					cycleStatement();
					}
					break;
				case 7:
					{
					setState(118);
					expr(0);
					setState(119);
					match(SEMICOLON);
					}
					break;
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallUserContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(ImperativeLanguageParser.NAME, 0); }
		public TerminalNode LPAREN() { return getToken(ImperativeLanguageParser.LPAREN, 0); }
		public CallArgsContext callArgs() {
			return getRuleContext(CallArgsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ImperativeLanguageParser.RPAREN, 0); }
		public CallUserContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callUser; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterCallUser(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitCallUser(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitCallUser(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallUserContext callUser() throws RecognitionException {
		CallUserContext _localctx = new CallUserContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_callUser);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(NAME);
			setState(127);
			match(LPAREN);
			setState(128);
			callArgs();
			setState(129);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallArgsContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(ImperativeLanguageParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(ImperativeLanguageParser.NAME, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ImperativeLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ImperativeLanguageParser.COMMA, i);
		}
		public CallArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterCallArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitCallArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitCallArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallArgsContext callArgs() throws RecognitionException {
		CallArgsContext _localctx = new CallArgsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_callArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(131);
				match(NAME);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(132);
					match(COMMA);
					setState(133);
					match(NAME);
					}
					}
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(ImperativeLanguageParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(ImperativeLanguageParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(ImperativeLanguageParser.SEMICOLON, 0); }
		public CallReadContext callRead() {
			return getRuleContext(CallReadContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(NAME);
			setState(142);
			match(ASSIGN);
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READINT:
			case READDOUBLE:
			case READ:
				{
				setState(143);
				callRead();
				}
				break;
			case NOT:
			case LPAREN:
			case BOOLEAN:
			case INT:
			case STRING:
			case DOUBLE:
			case NAME:
				{
				setState(144);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(147);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ImperativeLanguageParser.INT, 0); }
		public TerminalNode STRING() { return getToken(ImperativeLanguageParser.STRING, 0); }
		public TerminalNode DOUBLE() { return getToken(ImperativeLanguageParser.DOUBLE, 0); }
		public TerminalNode BOOLEAN() { return getToken(ImperativeLanguageParser.BOOLEAN, 0); }
		public TerminalNode NAME() { return getToken(ImperativeLanguageParser.NAME, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeLanguageParserListener ) ((ImperativeLanguageParserListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeLanguageParserVisitor ) return ((ImperativeLanguageParserVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << STRING) | (1L << DOUBLE) | (1L << NAME))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
